--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
-		"chai": "^4.2.0",
+		"chai": "^4.3.4",
 		"chai-http": "^4.3.0",
 		"cors": "^2.8.1",
-		"dotenv": "^8.2.0",
-		"express": "^4.14.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5"
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mocha": "^9.1.1",
+		"mongodb": "^4.1.2",
+		"zombie": "^6.1.4"
 	},
 	"repository": {
 		"type": "git",
